# mil_traficos

./: .gitignore  README.md  dados.csv  index.html  plota_dados.py  prepara_dados.ipynb  pyproject.toml
__marimo__/session/: plota_dados.py.json
dados/: sentencas_analisadas.csv
docs/: index.html
src/: plota_dados.py
